# cidadania_ja

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: requirements.txt
backend/backcid/: pyproject.toml
backend/backcid/tests/: test_backcid.py
backend/db/: session.py
backend/db/models/: candidate.py
backend/django/cidadania/: db.sqlite3  manage.py
backend/django/cidadania/cidadania/: asgi.py  settings.py  urls.py  wsgi.py
backend/django/cidadania/main/: models.py  serializers.py  urls.py  views.py
backend/django/cidadania/main/migrations/: 0001_initial.py
backend/django/cidadania/main/model/: Candidate.py
backend/fastapi/: main.py  reader.py
backend/fastapi/core/: config.py
backend/fastapi/db/: base.py  base_class.py
backend/fastapi/db/models/: mandate.py
backend/fastapi/schema/: candidate.py  mandate.py
data/: politicians.csv  politicians.xlsx
database/: Dockerfile
frontend/vuejs/cidadania-ja/: README.md  package-lock.json  package.json
frontend/vuejs/cidadania-ja/src/components/sidebar/: SidebarLink.vue
