[tool.poetry]
name = "backcid"
version = "0.1.0"
description = ""
authors = ["Gustavo saibro <gustavosaibro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
djangorestframework = "^3.13.1"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
SQLAlchemy = "^1.4.36"
python-dotenv = "^0.20.0"
pydantic = {extras = ["email"], version = "^1.9.1"}
decouple = "^0.0.7"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
